apps/home-assistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
subsets:
  - addresses:
      - ip: 192.168.0.89
    ports:
      - name: http
        port: 8123
        protocol: TCP
      - name: mqtt
        port: 1883
        protocol: TCP
