apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: 1883
  type: ClusterIP
